--- a/web/WEB.html
+++ b/web/WEB.html
@@ -1,156 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rebel Clothing - Rompiendo Esquemas</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        .navbar {
-            display: flex;
-            justify-content: center;
-            background-color: #111;
-            padding: 15px;
-        }
-        .navbar a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 15px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .navbar a:hover {
-            color: #aaa;
-        }
-        .hero {
-            background: url('https://via.placeholder.com/1600x800') no-repeat center center/cover;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-        .hero h1 {
-            font-size: 2.5rem;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 5px;
-        }
-        .section {
-            padding: 60px 20px;
-            max-width: 800px;
-            margin: auto;
-            text-align: left;
-        }
-        .footer {
-            background-color: #111;
-            padding: 15px;
-            font-size: 14px;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .grid-item {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 5px;
-        }
-    </style>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('/w3images/forestbridge.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar">
-    <a href="#about">Nosotros</a>
-    <a href="#values">Valores</a>
-    <a href="#collection">Colección</a>
-    <a href="#history">Historia</a>
-    <a href="#testimonials">Testimonios</a>
-    <a href="#contact">Contacto</a>
-</nav>
-
-<!-- Hero -->
-<header class="hero">
-    <h1>Rompiendo Esquemas</h1>
-</header>
-
-<!-- About Section -->
-<section class="section" id="about">
-    <h2>Nosotros</h2>
-    <p><strong>Rebel Clothing</strong> es moda para quienes desafían lo convencional. Expresa tu estilo sin límites.</p>
-</section>
-
-<!-- Values Section -->
-<section class="section" id="values">
-    <h2>Nuestros Valores</h2>
-    <div class="grid">
-        <div class="grid-item">
-            <h3>Autenticidad</h3>
-            <p>Creemos en la individualidad y en expresarse sin miedo.</p>
-        </div>
-        <div class="grid-item">
-            <h3>Calidad</h3>
-            <p>Usamos materiales premium para ofrecer prendas duraderas.</p>
-        </div>
-        <div class="grid-item">
-            <h3>Sostenibilidad</h3>
-            <p>Comprometidos con el medio ambiente y procesos responsables.</p>
-        </div>
-    </div>
-</section>
-
-<!-- Collection Section -->
-<section class="section" id="collection">
-    <h2>Nuestra Colección</h2>
-    <p>Diseños exclusivos para quienes marcan la diferencia.</p>
-</section>
-
-<!-- History Section -->
-<section class="section" id="history">
-    <h2>Nuestra Historia</h2>
-    <p>Fundada en 2010, Rebel Clothing nació como un movimiento de libertad creativa. Desde nuestros inicios, hemos trabajado para redefinir los límites de la moda urbana, creando piezas únicas con un fuerte mensaje de identidad y autenticidad.</p>
-</section>
-
-<!-- Testimonials Section -->
-<section class="section" id="testimonials">
-    <h2>Testimonios</h2>
-    <div class="grid">
-        <div class="grid-item">
-            <p>"Rebel Clothing me ayudó a encontrar mi verdadero estilo. ¡Me encanta!"</p>
-            <h4>- Juan López</h4>
-        </div>
-        <div class="grid-item">
-            <p>"Cada prenda tiene una personalidad única. Se nota la calidad y el diseño."</p>
-            <h4>- María González</h4>
-        </div>
-        <div class="grid-item">
-            <p>"El concepto de Rebel Clothing es simplemente increíble. Me identifico totalmente."</p>
-            <h4>- Andrés Fernández</h4>
-        </div>
-    </div>
-</section>
-
-<!-- Contact Section -->
-<section class="section" id="contact">
-    <h2>Contacto</h2>
-    <p>Ubicación: Avenida Reina Victoria, Cartagena, Murcia, España</p>
-    <p>Email: contacto@rebelclothing.com</p>
-    <p>Teléfono: +34 123 456 789</p>
-</section>
-
-<!-- Footer -->
-<footer class="footer">
-    <p>© 2025 Rebel Clothing - Todos los derechos reservados.</p>
-</footer>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Logo
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">COMO CREAR UN SERVIDOR FIVE M</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"></p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  </div>
+</div>
 
 </body>
 </html>
